# finance-tracker

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: ac9a4308be5e_initial_schema.py
frontend/src/: App.tsx
frontend/src/components/: .gitkeep  TransactionFilters.tsx  TransactionForm.tsx  TransactionList.tsx
frontend/src/pages/: .gitkeep  Transactions.tsx
frontend/src/services/: .gitkeep  api.ts  transactions.ts  types.ts
src/finance_tracker/: app.py  auth.py  database.py  models.py  schemas.py
src/finance_tracker/routers/: transactions.py  users.py
